# ReceiptReveal

./: README.md
.github/scripts/: build_docker_images.py  create_docker_manifests.py
.github/workflows/: docker-publish.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/.github/: copilot-instructions.md
backend/authentication/: auth_manager.py
backend/carbon_scanner/: app.py  carbon.db  db_manager.py  main.py
backend/carbon_scanner/authentication/: __init__.py  auth_manager.py
backend/carbon_scanner/config/: __init__.py
backend/carbon_scanner/database/: __init__.py  db_manager.py  sqllite_manager.py
backend/carbon_scanner/genai/: __init__.py  gemini_handler.py  lang_chain_process.py  temp.csv
backend/carbon_scanner/images/: __init__.py  image_uploader.py
backend/config/: __init__.py
backend/genai/: gemini_handler.py  lang_chain_process.py
documentation/: API.md
frontend/: Dockerfile  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Login.jsx  Profile.jsx  SignUp.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/services/: dbService.js
