[project]
name = "carbon-scanner"
version = "0.0.0"
description = "This is the backend code for Carbon Scanner, a web app that analyzes product carbon emissions."
authors = [
    {name = "GenAI4Env",email = "GenAI4Env/CarbonScanner@simplelogin.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "openai (>=1.68.2,<2.0.0)",
    "cohere (>=5.14.0,<6.0.0)",
    "google-genai (>=1.7.0,<2.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
