[project]
name = "carbon-scanner"
version = "0.0.0"
description = "This is the backend code for Carbon Scanner, a web app that analyzes product carbon emissions."
authors = [
    {name = "GenAI4Env",email = "GenAI4Env/CarbonScanner@simplelogin.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "openai (>=1.68.2,<2.0.0)",
    "cohere (>=5.14.0,<6.0.0)",
    "google-genai (>=1.7.0,<2.0.0)",
    "aiohttp (>=3.11.14,<4.0.0)",
    "flask[async] (>=3.1.0,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "langchain-google-genai (<2.1.1)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
